--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,4 +14,55 @@
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
 
+
+    <!-- SECURITY ROLES -->
+    <security-role>
+        <role-name>admin</role-name>
+    </security-role>
+
+    <security-role>
+        <role-name>organizator</role-name>
+    </security-role>
+
+    <security-role>
+        <role-name>korisnik</role-name>
+    </security-role>
+
+    <!-- SECURITY CONSTRAINTS -->
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>AdminViewProperties</web-resource-name>
+            <url-pattern>/admin.jsf</url-pattern>
+            <http-method>GET</http-method>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
+
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>UserViewProperties</web-resource-name>
+            <url-pattern>/user.jsf</url-pattern>
+            <http-method>GET</http-method>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>organizator</role-name>
+        </auth-constraint>
+    </security-constraint>
+
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>UserViewProperties</web-resource-name>
+            <url-pattern>/user.jsf</url-pattern>
+            <http-method>GET</http-method>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>korisnik</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <deny-uncovered-http-methods/>
+
+
+
 </web-app>
