--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     providedCompile group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '8.0.0'
     compile group: 'org.primefaces', name: 'primefaces', version: '8.0'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.12.Final'
 
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
