--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     providedCompile group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '8.0.0'
     compile group: 'org.primefaces', name: 'primefaces', version: '8.0'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.12.Final'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
