--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ dependencies {
     compile group: 'org.primefaces', name: 'primefaces', version: '8.0'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.12.Final'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager
+    implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.5.4.Final'
+
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
