--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,12 @@ plugins {
     id 'war'
 }
 
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 
 group 'com.online-events'
 version '1.0-SNAPSHOT'
