--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -67,7 +67,7 @@
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>OrganizerViewProperties</web-resource-name>
-            <url-pattern>/admin/*</url-pattern>
+            <url-pattern>/secured/admin/*</url-pattern>
 <!--            <http-method>GET</http-method>-->
         </web-resource-collection>
         <auth-constraint>
@@ -78,11 +78,12 @@
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>UserViewProperties</web-resource-name>
-            <url-pattern>/user/*</url-pattern>
+            <url-pattern>/secured/user/*</url-pattern>
 <!--            <http-method>GET</http-method>-->
         </web-resource-collection>
         <auth-constraint>
             <role-name>user</role-name>
+            <role-name>admin</role-name>
         </auth-constraint>
     </security-constraint>
     <deny-uncovered-http-methods/>
