--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -83,7 +83,7 @@
         </web-resource-collection>
         <auth-constraint>
             <role-name>user</role-name>
-            <role-name>admin</role-name>
+            <role-name>organizer</role-name>
         </auth-constraint>
     </security-constraint>
     <deny-uncovered-http-methods/>
