--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -88,6 +88,15 @@
     </security-constraint>
     <deny-uncovered-http-methods/>
 
-
+    <!-- Handle 403 Error -->
+    <error-page>
+        <error-code>403</error-code>
+        <location>/error403.xhtml</location>
+    </error-page>
+    <!-- Handle 404 Error -->
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error404.xhtml</location>
+    </error-page>
 
 </web-app>
