--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -53,16 +53,16 @@
     </security-role>
 
     <!-- SECURITY CONSTRAINTS -->
-<!--    <security-constraint>-->
-<!--        <web-resource-collection>-->
-<!--            <web-resource-name>AdminViewProperties</web-resource-name>-->
-<!--            <url-pattern>/admin.jsf</url-pattern>-->
-<!--            <http-method>GET</http-method>-->
-<!--        </web-resource-collection>-->
-<!--        <auth-constraint>-->
-<!--            <role-name>admin</role-name>-->
-<!--        </auth-constraint>-->
-<!--    </security-constraint>-->
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>UserViewProperties</web-resource-name>
+            <url-pattern>/secured/super-admin/*</url-pattern>
+            <!--            <http-method>GET</http-method>-->
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
 
     <security-constraint>
         <web-resource-collection>
@@ -72,6 +72,7 @@
         </web-resource-collection>
         <auth-constraint>
             <role-name>organizer</role-name>
+            <role-name>admin</role-name>
         </auth-constraint>
     </security-constraint>
 
@@ -84,8 +85,10 @@
         <auth-constraint>
             <role-name>user</role-name>
             <role-name>organizer</role-name>
+            <role-name>admin</role-name>
         </auth-constraint>
     </security-constraint>
+
     <deny-uncovered-http-methods/>
 
     <!-- Handle 403 Error -->
