--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     providedCompile group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '8.0.0'
     implementation group: 'org.primefaces', name: 'primefaces', version: '10.0.0'
 
@@ -26,6 +27,10 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager
     implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.5.4.Final'
+    implementation group: 'org.apache.directory.api', name: 'api-all', version: '2.1.0'
+    testImplementation group: 'junit', name: 'junit', version: '4.4'
+
+
 
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
