--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,11 @@
 
 <!--    <context-param>-->
 <!--        <param-name>primefaces.THEME</param-name>-->
+<!--        <param-value>start</param-value>-->
+<!--    </context-param>-->
+
+<!--    <context-param>-->
+<!--        <param-name>primefaces.THEME</param-name>-->
 <!--        <param-value>afternoon</param-value>-->
 <!--    </context-param>-->
     <context-param>
