--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,10 @@ dependencies {
     providedCompile group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '8.0.0'
     implementation group: 'org.primefaces', name: 'primefaces', version: '10.0.0'
 
-  //  compile group: 'org.primefaces', name: 'primefaces', version: '8.0'
+    implementation group: 'com.github.librepdf', name: 'openpdf', version: '1.3.26'
+
+
+    //  compile group: 'org.primefaces', name: 'primefaces', version: '8.0'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.12.Final'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager
